--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -1,12 +1,11 @@
 <div id="top-bar">
   <div id="menu-bar">
-    <span>Cars & Property</span>
-    <span>Fashion</span>
-    <span>Home and Living</span>
-    <span>Electronics & Mobiles</span>
-    <span>Hobbies & Games</span>
-    <span>Jobs & Services</span>
-    <span>Others</span>
+    <a href="/search.html?searchTerm=&cat=0">Electronic Devices</a>
+    <a href="/search.html?searchTerm=&cat=1">Digital Storage</a>
+    <a href="/search.html?searchTerm=&cat=4">Toys</a>
+    <a href="/search.html?searchTerm=&cat=8">Pants and Leggings</a>
+    <a href="/search.html?searchTerm=&cat=10">Anime Merch</a>
+    <a href="/search.html?searchTerm=&cat=14">Electric Fans</a>
   </div>
   <div id="title-bar">
     <a href="/">
@@ -29,7 +28,7 @@
         <div style="font-weight: bold;">Actions</div>
         <a href="#" class="dropdown-for-logged-out"><i class="material-icons">login</i><span>Login / Register</span></a>
         <a href="#" class="dropdown-for-login"><i class="material-icons">account_circle</i><span>Profile</span></a>
-        <a href="#" class="dropdown-for-login"><i class="material-icons">park</i><span>GreenRank</span></a>
+        <a href="#" class="dropdown-for-login"><i class="material-icons">park</i><span>Green Points</span></a>
         <a href="#" class="dropdown-for-login"><i class="material-icons">chat</i><span>Chats</span></a>
         <a href="#" class="dropdown-for-login"><i class="material-icons">logout</i><span>Logout</span></a>
       </div>
