--- a/public/search.html
+++ b/public/search.html
@@ -68,10 +68,12 @@
         </div>
       </div>
     </div>
+
+    <!-- <button onclick="nextPage();">More Results</button> -->
   </main>
 
   <script src="/scripts/global.js"></script>
   <script src="/scripts/utils.js"></script>
-  <script type="module" src="/scripts/search.js"></script>
+  <script src="/scripts/search.js"></script>
 </body>
 </html>
