--- a/public/search.html
+++ b/public/search.html
@@ -75,5 +75,6 @@
   <script src="/scripts/global.js"></script>
   <script src="/scripts/utils.js"></script>
   <script src="/scripts/search.js"></script>
+  <script src="/scripts/chat-functions.js"></script>
 </body>
 </html>
