Profile page sidebar complete, changed small profile picture class name

--- a/public/search.html
+++ b/public/search.html
@@ -56,7 +56,7 @@
     <div id="search-results" class="full-width-listings-container card">
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/loader.gif" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/loader.gif" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Loading...</div>
             <div class="listing-age">Loading...</div>
