--- a/public/sell.html
+++ b/public/sell.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/styles/top-bar.css">
   <link rel="stylesheet" href="/styles/sell.css">
 
-  <title>Sell an item</title>
+  <title>Sell an item | Carousell</title>
 </head>
 <body>
   <main>
