--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/styles/top-bar.css">
   <link rel="stylesheet" href="/styles/index.css">
   
-  <title>Carousell Home</title>
+  <title>Home | Carousell</title>
 </head>
 <body>
   <main>
@@ -74,7 +74,7 @@
     <div id="daily-recommendations" class="full-width-listings-container card">
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -98,7 +98,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -122,7 +122,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -146,7 +146,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -170,7 +170,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -194,7 +194,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -218,7 +218,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -242,7 +242,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -266,7 +266,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
@@ -290,7 +290,7 @@
       </div>
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture-small">
           <div class="listing-info-top-text">
             <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
             <div class="listing-age">7 hours ago</div>
