--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -21,8 +21,8 @@
 
     <div id="user-actions" style="position: relative;">
       <!--ensure profile picture is square (crop before upload? also need to crop server-side just in case)-->
-      <img class="profile-picture" src="/media/placeholder-profile-picture.jpeg" alt="Your profile picture">
-      <span id="user-greeting">Hello, <span id="username">User</span></span>
+      <img class="profile-picture-small" class="profile-picture-small" src="/media/placeholder-profile-picture.jpeg" alt="Your profile picture">
+      <span id="user-greeting">Hello, <span id="top-bar-username">User</span></span>
       <i class="material-icons">expand_more</i>
 
       <div id="user-actions-dropdown">
