--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <main>
-    <h1 style="text-align: center;">Explore Our Used Item Marketplace</h1>
+    <h1>Explore Our Used Item Marketplace</h1>
     <div id="explore-categories" class="card">
       <div class="explore-category">
         <img src="/media/loader.gif" alt="Following">
