Remove some inline styles + center-align "no search results" message

--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -18,14 +18,14 @@
       <button type="submit" class="material-icons">search</button>
     </form>
 
-    <div id="user-actions" style="position: relative;">
+    <div id="user-actions">
       <!--ensure profile picture is square (crop before upload? also need to crop server-side just in case)-->
       <img class="profile-picture-small" class="profile-picture-small" src="/media/placeholder-profile-picture.jpeg" alt="Your profile picture">
       <span id="user-greeting">Hello, <span id="top-bar-username">User</span></span>
       <i class="material-icons">expand_more</i>
 
       <div id="user-actions-dropdown">
-        <div style="font-weight: bold;">Actions</div>
+        <div id="user-actions-title">Actions</div>
         <a href="#" class="dropdown-for-logged-out"><i class="material-icons">login</i><span>Login / Register</span></a>
         <a href="#" class="dropdown-for-login"><i class="material-icons">account_circle</i><span>Profile</span></a>
         <a href="#" class="dropdown-for-login"><i class="material-icons">park</i><span>Green Points</span></a>
