broke sell.html, and fixed it

--- a/public/sell.html
+++ b/public/sell.html
@@ -55,7 +55,7 @@
         <h2>Attach photos</h2>
         <div class="attach-photos">
           <span class="material-icons-outlined"></span>
-          <input type="file" />
+          <input type="file" accept="image/*" />
         </div>
       </div>
 
