--- a/public/sell.html
+++ b/public/sell.html
@@ -134,27 +134,25 @@
           <div class="half">
             <h3 id="summary-title">Title</h3>
             <div>Legion 5 Pro</div>
-          </div>
-          <div class="half">
+
             <h3 id="summary-category">Category</h3>
             <div>Laptops in Computers & Tech</div>
-          </div>
-        </div>
-        <div class="halves-wrapper">
-          <div class="half">
-            <h3 id="summary-price">Price</h3>
-            <div>S$2799.99</div>
-          </div>
-        </div>
 
-        <h3 id="summary-description">Description</h3>
-        <div>Really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really really long description</div>
+            <h3 id="summary-price">Price</h3>
+            <div></div>
+
+            <h3 id="summary-description">Description</h3>
+            <div></div>
+          </div>
+          <div class="half">
+            <h3 id="summary-img">Images</h3>
+            <div></div>
+            <div>The first image above will serve as your item's cover image.</div>
+          </div>
+        </div>
 
         <h3 id="summary-additional-fields">Additional fields</h3>
-        <h4>Does the laptop turn on?</h4>
-        <div>No.</div>
-        <h4>Is this a scam?</h4>
-        <div>I dunno, buy it to find out!</div>
+        <div></div>
       </div>
   
       <div id="sell-procedure-navigation-buttons">
