--- a/public/profile.html
+++ b/public/profile.html
@@ -29,8 +29,8 @@
           <div class="profile-tab-switcher"><span>Coins</span></div>
           <!-- <div class="profile-tab-switcher"><span>Balance</span></div> -->
           <!-- <div class="profile-tab-switcher"><span>CarouBiz</span></div> -->
-          <div id="green-points-profile-tab-switcher" class="profile-tab-switcher profile-tab-switcher-selected"><span>Green Points</span></div>
-          <div class="profile-tab-switcher"><span>Analytics</span></div>
+          <div id="green-points-profile-tab-switcher" class="profile-tab-switcher"><span>Green Points</span></div>
+          <div class="profile-tab-switcher profile-tab-switcher-selected"><span>Analytics</span></div>
           <!-- <button id="edit-profile" class="primary-button"><span>Edit profile</span></button> -->
         </div>
       </div>
@@ -234,7 +234,7 @@
         TODO: implement user coins UI
       </div>
 
-      <div id="green-points" class="profile-tab-content profile-tab-content-selected">
+      <div id="green-points" class="profile-tab-content">
         <div id="green-points-summary" class="card">
           <img src="/media/green-points.svg" alt="Green Points logo">
           <div id="green-points-summary-text">
@@ -282,10 +282,31 @@
           </table>
         </div>
       </div>
+
+      <div id="analytics" class="profile-tab-content profile-tab-content-selected">
+        <h2>Average prices per category</h2>
+        <span>Graph shows 7-day rolling average of category prices.</span>
+        <div id="category-search">
+          <div id="category-search-input-wrapper">
+            <span class="material-icons">search</span>
+            <input type="text" placeholder="Find a category">
+          </div>
+          <div id="category-search-results">
+            <div id="no-category-search-results">No categories found.</div>
+          </div>
+          <div id="category-options"></div>
+        </div>
+        <div id="price-graph-wrapper" class="card">
+          <canvas id="price-graph">
+            
+          </canvas>
+        </div>
+      </div>
     </div>
   </main>
 
   <script src="/scripts/global.js"></script>
   <script src="/scripts/profile.js"></script>
+  <script src="/scripts/utils.js"></script>
 </body>
 </html>
