--- a/public/sell.html
+++ b/public/sell.html
@@ -64,30 +64,16 @@
       <div id="sell-procedure-step-2" class="sell-procedure-step">
         <h1>About the item</h1>
 
-        <!-- <div class="halves-wrapper">
-          <div class="half">
-            <h2>Condition</h2>
-            <div class="select-wrapper">
-              <select id="listing-condition">
-                <option value="Brand new">Brand new</option>
-                <option value="Like new">Like new</option>
-                <option value="Lightly used">Lightly used</option>
-                <option value="Well-used">Well-used</option>
-              </select>
-              <span class="material-icons">expand_more</span>
-            </div>
-          </div>
-          <div class="half">
-            <h2>Price</h2>
-            <div id="price-input-wrapper">
-              <span id="currency">S$</span>
-              <input type="text" id="listing-price" placeholder="Price of your item">
-            </div>
-          </div>
-        </div> -->
-
         <h2>Description</h2>
         <textarea id="listing-description" placeholder="Describe what you are selling and include any details that buyers may be interested in. People love items with stories!"></textarea>
+
+        <datalist id="questions">
+          <option value="Edge">
+          <option value="Firefox">
+          <option value="Chrome">
+          <option value="Opera">
+          <option value="Safari">
+        </datalist>
 
         <h2>Provide details about item condition</h2>
         <div>Having more information about item condition helps your item sell faster.</div>
@@ -98,7 +84,7 @@
             <button onclick="removeAdditionalField(this)" title="Delete this field" class="remove-field material-icons">delete_outline</button>
           </h2>
           <h3>Field title</h3>
-          <input type="text" class="additional-field-title" placeholder="Name of the field (e.g. item material, stains on the item, etc)">
+          <input list="questions" type="text" class="additional-field-title" placeholder="Name of the field (e.g. item material, stains on the item, etc)">
           <h3>Field value</h3>
           <input type="text" class="additional-field-text" placeholder="Details">
           <div class="attach-photos">
