img analysis fixes

--- a/public/sell.html
+++ b/public/sell.html
@@ -103,7 +103,7 @@
         <div class="additional-field">
           <h2>
             <span>Additional field 1</span>
-            <button onclick="removeAdditionalField(this)" title="Delete this field" class="remove-field material-icons">delete_outline</button>
+            <button data-additional-field="1" onclick="removeAdditionalField(this)" title="Delete this field" class="remove-field material-icons">delete_outline</button>
           </h2>
           <h3>Field title</h3>
           <input list="questions" type="text" class="additional-field-title" placeholder="Name of the field (e.g. item material, stains on the item, etc)">
